--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 # File created using '.gitignore Generator' for Visual Studio Code: https://bit.ly/vscode-gig
 
 # Created by https://www.gitignore.io/api/linux,visualstudiocode,c++,cmake
+.vscode/
 
 ### C++ ###
 # Prerequisites
